--- a/css/dukunganPelanggan.css
+++ b/css/dukunganPelanggan.css
@@ -1,15 +1,11 @@
-.konten{
-  background-color: #fff;
-  padding: 40px;
-  margin: 100px 40px 40px 40px;
-  min-height: 475px;
-}
 .konten h1{
   text-align: center;
 }
-.konten p{
+.konten>p{
   margin: 10px 0;
-  text-align: justify;
+  text-align: center;
+  font-size: 24px;
+  font-weight: bold;
 }
 
 form{
@@ -46,5 +42,7 @@ textarea{
   form input{
     width: 90%;
   }
-
+  .konten>p{
+    font-size: 16px;
+  }
 }
