--- a/css/style.css
+++ b/css/style.css
@@ -312,6 +312,7 @@ footer p{
   border: solid 12px #ccc;
   border-top-color: #2095F2;
   border-radius: 100%;
+  z-index: 100;
 
   position: fixed;
   right: 50%;
