fix kecoa terbang

--- a/css/home-masuk.css
+++ b/css/home-masuk.css
@@ -28,7 +28,8 @@
   margin-left: 10px;
   top: -160px;
   transform: rotate(180deg);
-  display: none;
+  display: flex;
+  color: white;
 }
 
 .tengah > .kiri_panah{
@@ -61,6 +62,8 @@
   margin: 100px 40px 40px 40px;
   display: block;
   /* border: 2px solid cyan; */
+  background-color: rgba(0,0,0,0);
+  box-shadow: none;
 }
 
 .isi-kanan1{
