--- a/css/style.css
+++ b/css/style.css
@@ -379,8 +379,8 @@ footer p{
   z-index: 100;
 
   position: fixed;
-  right: 50%;
-  bottom: 50%;
+  left: 50%;
+  top: 50%;
   transform: translateX(-50%);
   transform: translateY(-50%);
 
