--- a/css/home-masuk.css
+++ b/css/home-masuk.css
@@ -1,3 +1,5 @@
+
+
 .kanan >ul{
   padding: 10px;
 }
@@ -51,7 +53,7 @@
 }
 
 .cover1:hover{
-  background-color: #e2e2e2;
+  background-color: var(--hovv);;
 }
 
 .cover1 a{
@@ -62,7 +64,7 @@
   margin: 100px 40px 40px 40px;
   display: block;
   /* border: 2px solid cyan; */
-  background-color: var(--bg-color);
+  /* background-color: var(--bg-color); */
   box-shadow: none;
 }
 
@@ -128,18 +130,18 @@
 /* JUDUL , PENGARANG , EPISODE */
 
     .judul{
-      color: black;
+      color: var(--judul);
       font-size: 16px;
       font-weight: 700;
     }
 
     .episode{
-      color: black;
+      color: var(--episode);
       font-size: 16px;
     }
 
     .pengarang{
-      color: black;
+      color: var(--pengarang);
       font-size: 16px;
     }
 
@@ -157,7 +159,7 @@
 }
 
 .row:nth-child(odd){
-  background-color: #e9e9e9;
+  background-color: var(--nth);
 }
 
 .row a{
@@ -227,7 +229,7 @@
 
 .btn-banyak:hover{
   cursor: pointer;
-  background-color: #e2e2e2;
+  background-color: var(--hovv);
 }
 
 .btn-banyak i{
