--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,16 @@
 /* dark mode */
 :root {
     --primary-color: #302AE6;
-    --secondary-color: #536390;
+    --secondary-color: #000000;
     --font-color: #424242;
     --bg-color: #fff;
     --heading-color: #292922;
     --bg-img: url("../img/background.png");
+    --judul:#000000;
+    --episode:#000000;
+    --pengarang:#000000;
+    --nth:#e9e9e9;
+    --hovv:#e2e2e2;
 }
 body {
     background-image: var(--bg-img);
@@ -16,17 +21,26 @@ body {
     --primary-color: #9A97F3;
     --secondary-color: #818cab;
     --font-color: #e1e1ff;
-    --bg-color: #161625;
+    --bg-color: rgb(20, 20, 20);
     --heading-color: #818cab;
     --bg-img: url("../img/background-black.png");
+    --judul:#fff;
+    --episode:#fff;
+    --pengarang:#fff;
+    --nth:#494949;
+    --hovv:#363636;
 }
 h1 {
-    color: var(--secondary-color);
+  color: var(--secondary-color);
 }
 a {
-    color: var(--primary-color);
+  color: var(--primary-color);
 }
 
+.kanan > li > .respon{
+  background-color: var(--bg-color);
+  color: var(--font-color);
+}
 /* all  */
 *{
   margin: 0;
@@ -302,7 +316,7 @@ nav #find input{
 /* footer  */
 footer{
   position: static;
-  background-color: rgba(255,255,255,0.8);
+  background-color: var(--bg-color);
   width: 100%;
   text-align: center;
   margin:0;
