--- a/css/admin.css
+++ b/css/admin.css
@@ -1,12 +1,43 @@
 .left{
+  text-align: center;
   float: left;
   box-sizing: border-box;
   width: 25%;
-  border: 1px black;
+  border: 1px solid black;
+  background-color: #fff;
+  height: 100vh;
+  position: fixed;
+  left: 0;
+  top: 0;
 }
 .right{
+  text-align: center;
   float: right;
   box-sizing: border-box;
   width: 75%;
-  order: 1px black;
+  border: 1px solid black;
+}
+
+.profil{
+  padding: 40px;
+  border-bottom: 2px solid grey;
+}
+
+.menu{
+  margin: 20px;
+}
+.menu > li{
+  text-decoration: none;
+  list-style-type: none;
+}
+ .menu > li a {
+     display: block;
+     color: #595959;
+     padding: 10px;
+     text-align: center;
+     text-decoration: none;
+     font-weight: bold;
+   }
+a.active{
+  background-color: #595959;
 }
