--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,10 @@ nav #find input{
 }
 
 /* modal box */
-
+.modal-konten{
+  -webkit-animation: slide-down 1s ease-out;
+  -moz-animation: slide-down 1s ease-out;
+}
 .modal-konten button{
   border: none;
   display: inline-block;
@@ -245,6 +248,12 @@ nav #find input{
   position: relative;
   left:40%;
 }
+
+#dropdown{
+  -webkit-animation: slide-down .6s ease-out;
+  -moz-animation: slide-down .6s ease-out;
+}
+
 .garis{
   border-bottom: 1px solid grey;
   margin-bottom: 10px;
@@ -402,4 +411,13 @@ footer p{
 @keyframes putar {
   from{transform: rotate(0deg)}
   to{transform: rotate(360deg)}
+}
+
+@-webkit-keyframes slide-down {
+      0% { opacity: 0; -webkit-transform: translateY(-100%); }
+    100% { opacity: 1; -webkit-transform: translateY(0); }
+}
+@-moz-keyframes slide-down {
+      0% { opacity: 0; -moz-transform: translateY(-100%); }
+    100% { opacity: 1; -moz-transform: translateY(0); }
 }
