--- a/css/admin.css
+++ b/css/admin.css
@@ -1,9 +1,8 @@
 .left{
   text-align: center;
   float: left;
-  box-sizing: border-box;
+  box-sizing: bo2rder-box;
   width: 25%;
-  border: 1px solid black;
   background-color: #fff;
   height: 100vh;
   position: fixed;
@@ -15,9 +14,16 @@
   float: right;
   box-sizing: border-box;
   width: 75%;
-  border: 1px solid black;
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
 }
 
+.konten{
+  text-align: center;
+  margin: 20px;
+  background-color: #fff;
+}
 .profil{
   padding: 40px;
   border-bottom: 2px solid grey;
@@ -40,4 +46,49 @@
    }
 a.active{
   background-color: #595959;
+}
+
+table, th, td{
+  border: 2px solid black;
+  padding: 5px;
+}
+
+tr:nth-child(even){
+  background-color: grey;
+}
+
+table {
+  border-collapse: collapse;
+  text-align: center;
+  color: black;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 40px;
+}
+td>a{
+  text-decoration: none;
+}
+.vhijau{
+  background-color: green;
+  color: #fff;
+  padding: 3px;
+  border-radius: 5px;
+}
+.vkuning{
+  background-color: yellow;
+  color: #fff;
+  padding: 3px;
+  border-radius: 5px;
+}
+.vmerah{
+  background-color: red;
+  color: #fff;
+  padding: 3px;
+  border-radius: 5px;
+}
+.vbiru{
+  background-color: blue;
+  color: #fff;
+  padding: 3px;
+  border-radius: 5px;
 }
