--- a/css/home.css
+++ b/css/home.css
@@ -236,13 +236,19 @@
 }
 
 .kanan2-isi{
-  margin: 10px;
+  margin: 10px 0 10px 0 ;
   width: 100%;
   float: left;
   display: flex;
 }
 
+.kanan2-isi:hover{
+  border-radius: 10px;
+  background-color: #e2e2e2;
+}
+
 .num{
+  padding: 50px 10px 0 10px;
   position: relative;
   display: block;
 }
@@ -250,6 +256,7 @@
 .kanan2-isi a{
   text-decoration: none;
   display: flex;
+  visibility: ;
 }
 
 .kanan2-isi img{
@@ -257,7 +264,7 @@
 }
 
 .lol{
-  margin: 0 0 10px 10px;
+  margin: 20px 0 10px 10px;
   display: block;
 }
 
