--- a/css/home.css
+++ b/css/home.css
@@ -130,9 +130,17 @@
       font-weight: 700;
     }
 
+    .judul:hover{
+      color: #2095F2;
+    }
+
     .episode{
       color: black;
       font-size: 16px;
+    }
+
+    .episode:hover{
+      color: #2095F2;
     }
 
     .pengarang{
@@ -153,7 +161,7 @@
   margin: 0;
 }
 
-.row:nth-child(odd){
+.row:nth-child(even){
   background-color: #e9e9e9;
 }
 
