--- a/css/style.css
+++ b/css/style.css
@@ -13,11 +13,16 @@
     --hovv:#e2e2e2;
     --atas:#e2e2e2
 }
-body {
-    background-image: var(--bg-img);
-    background-color: var(--bg-color);
-    color: var(--font-color);
+body{
+   scrollbar-face-color: #EEC800;
+   scrollbar-shadow-color: #006cb4;
+   scrollbar-highlight-color:#006cb4;
+   scrollbar-3dlight-color: #006cb4;
+   scrollbar-darkshadow-color: #006cb4;
+   scrollbar-track-color: #006cb4;
+   scrollbar-arrow-color: #C1C1D1;
 }
+
 [data-theme="dark"] {
     --primary-color: #9A97F3;
     --secondary-color: #818cab;
