--- a/css/home.css
+++ b/css/home.css
@@ -218,6 +218,19 @@
   color: #2095F2;
 }
 
+  .slide-up, .slide-down {
+    max-height: 0;            
+    overflow-y: hidden;
+    -webkit-transition: max-height 0.5s ease-in-out;
+    -moz-transition: max-height 0.5s ease-in-out;
+    -o-transition: max-height 0.5s ease-in-out;
+    transition: max-height 0.5s ease-in-out;
+  }
+
+  .slide-down {            
+    max-height: 200px;
+  }
+
 .btn-banyak a{
   text-decoration: none;
   font-weight: bold;
