--- a/css/style.css
+++ b/css/style.css
@@ -163,8 +163,8 @@ nav li input, nav #find input{
     border-radius: 4px;
     font-size: 16px;
     background-color: white;
-    background-image: url('');
-    background-position: 10px 10px; 
+    background-image: url('searchicon.png');
+    background-position: 10px 10px;
     background-repeat: no-repeat;
     padding: 12px 20px 12px 40px;
     -webkit-transition: width 0.4s ease-in-out;
@@ -180,7 +180,7 @@ nav #find input{
 }
 
 
-  
+
 
 .kanan > ul > li > a{
   text-align: left;
