--- a/css/style.css
+++ b/css/style.css
@@ -163,7 +163,7 @@ nav li input, nav #find input{
     border-radius: 4px;
     font-size: 16px;
     background-color: white;
-    background-image: url('searchicon.png');
+    background-image: url('../img/searchIcon.png');
     background-position: 10px 10px;
     background-repeat: no-repeat;
     padding: 12px 20px 12px 40px;
