--- a/css/modal_verifikasi.css
+++ b/css/modal_verifikasi.css
@@ -76,7 +76,7 @@ body{
   box-sizing: border-box;
   margin: 30px 0 0 160px;
 }
-p{
+.content p, .content2 p{
   padding-top: 10px;
   font-size: 19px;
   color: #1a1a1a;
